--- a/index.html
+++ b/index.html
@@ -22,7 +22,38 @@
     </header>
 
     <main>
+        <div class="trending"> 
+            <div class="trendword"> Trending Cuisine!</div>
+            <div class="trendcontent">
+                <div class="trendpic"> </div>
+                <h1> Name of the Cuisine</h1>
+                <p> The best cuisine in your life! </p>
+            </div>
+        </div>
 
+        <div class="categories">
+            <div class="cat1">
+                <a href="#"> Category 1</a>
+            </div>
+            <div class="cat2">
+                <a href="#"> Category 2</a>
+            </div>
+            <div class="cat3">
+                <a href="#"> Category 3</a>
+            </div>
+            <div class="cat4">
+                <a href="#"> Category 4</a>
+            </div>
+        </div>
+
+        <div class="Forum">
+            <h1> Questions or Celebration?</h1>
+            <p> Wanna share the beautiful food you make? <br> 
+                or any difficulties encoutered during food preparation? <br>
+                feel free to post to celebrate or ask for help!
+            </p>
+            <div class="button"> Let's Post! </div>
+        </div>
     </main>
     
     <footer>
