content creation and structural update

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/responsive-nav.css">
     <script src="js/responsive-nav.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="common stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
+    <title> Home Page </title>
 </head>
 
 <body>
