--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
 
     <main>
         <div class="trending"> 
-            <div class="trendword"> Trending Cuisine!</div>
+            <div class="trendword"> Top Pick Cuisine!</div>
             <div class="trendcontent">
                 <div class="trendpic"> </div>
                 <h1> Name of the Cuisine</h1>
-                <p> The best cuisine in your life! </p>
+                <p> The best food in your life! </p>
+            </div>
+            <div class="trendcontent">
+                <div class="trendpic"> </div>
+                <h1> Name of the Cuisine</h1>
+                <p> The best food in your life! </p>
             </div>
         </div>
 
