--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <div class="trending"> 
-            <div class="trendword"> Top Pick Cuisine!</div>
+            <div class="trendword"> Top Pick Cuisines!</div>
             <div class="trendcontent">
                 <div class="trendpic"> </div>
                 <h1> Name of the Cuisine</h1>
@@ -33,7 +33,12 @@
             <div class="trendcontent">
                 <div class="trendpic"> </div>
                 <h1> Name of the Cuisine</h1>
-                <p> The best food in your life! </p>
+                <p> The 2nd best food in your life! </p>
+            </div>
+            <div class="trendcontent">
+                <div class="trendpic"> </div>
+                <h1> Name of the Cuisine</h1>
+                <p> The 3rd best food in your life! </p>
             </div>
         </div>
 
@@ -52,8 +57,12 @@
             </div>
         </div>
 
-        <div class="Forum">
-            <h1> Questions or Celebration?</h1>
+        <div class="forum">
+            <h1> Questions or Celebrations?</h1>
+            <div class="forumpics">
+                <div class="pic1"> </div>
+                <div class="pic2"> </div>
+            </div>
             <p> Wanna share the beautiful food you make? <br> 
                 or any difficulties encoutered during food preparation? <br>
                 feel free to post to celebrate or ask for help!
