--- a/index.html
+++ b/index.html
@@ -23,52 +23,64 @@
     </header>
 
     <main>
-        <div class="trending"> 
-            <div class="trendword"> Top Pick Cuisines!</div>
-            <div class="trendcontent">
-                <div class="trendpic"> </div>
-                <h1> Name of the Cuisine</h1>
-                <p> The best food in your life! </p>
+        <div class="homepage"> 
+            <div class="hometitle">
+                La Maison de Fleur
             </div>
-            <div class="trendcontent">
-                <div class="trendpic"> </div>
-                <h1> Name of the Cuisine</h1>
-                <p> The 2nd best food in your life! </p>
-            </div>
-            <div class="trendcontent">
-                <div class="trendpic"> </div>
-                <h1> Name of the Cuisine</h1>
-                <p> The 3rd best food in your life! </p>
+            <div class="homecontent">
+                The Best French Restaurant in Chapel Hill
             </div>
         </div>
 
-        <div class="categories">
-            <div class="cat1">
-                <a href="#"> Category 1</a>
+        <div class="foods">
+            <div class="categories">
+                <div class="cat1">
+                    <a href="#"> Category 1</a>
+                </div>
+                <div class="cat2">
+                    <a href="#"> Category 2</a>
+                </div>
+                <div class="cat3">
+                    <a href="#"> Category 3</a>
+                    </div>
+                <div class="cat4">
+                    <a href="#"> Category 4</a>
+                </div>
             </div>
-            <div class="cat2">
-                <a href="#"> Category 2</a>
+            <div class="menu"> Sesonal Menu </div>
+        </div>
+
+        <div class="appointment">
+
+            <div class="applink"> 
+                <div class="apptitle">
+                    Seat Booking
+                </div>
+                <div class="appcontent">
+                    At The Best French Restaurant in Chapel Hill
+                </div>
             </div>
-            <div class="cat3">
-                <a href="#"> Category 3</a>
+            <div class="appphoto"> </div>
+        </div>
+
+        <div class="about"> 
+            <div class="abouttitle">
+                <h1>ABOUT</h1>
+                <p>La Maison de Fleur</p>
             </div>
-            <div class="cat4">
-                <a href="#"> Category 4</a>
             </div>
         </div>
 
-        <div class="forum">
-            <h1> Questions or Celebrations?</h1>
-            <div class="forumpics">
-                <div class="pic1"> </div>
-                <div class="pic2"> </div>
+        <div class="subscribe">
+            <div class="subphoto"> </div>
+            <div class="newsletters">
+                <h1> Hear from us </h1>
+                <p> Subscribe to our email list to get the latest news about special events, new seasonal menu release and other fantastic news!
+                </p>
+                <div class="subpics"></div>
+                <div class="button"> SUBMIT </div>
             </div>
-            <p> Wanna share the beautiful food you make? <br> 
-                or any difficulties encoutered during food preparation? <br>
-                feel free to post to celebrate or ask for help!
-            </p>
-            <div class="button"> Let's Post! </div>
-        </div>
+    </div>
     </main>
     
     <footer>
