--- a/forum.html
+++ b/forum.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="title"> the forum part of a marvelous website </div>
+        <div class="title"> The forum part of a marvelous website </div>
         <nav class="nav-collapse">
         <ul>
             <li><a href="#">Home</a></li>
@@ -23,6 +23,9 @@
     <main>
         <section class="content-area" id="submission-section">
             <h2 class="content-title">Share Your Culinary Creations!</h2>
+
+            <img src="css/imageBread2.png" alt="Divider Image" class="divider-image1">
+
             <form id="submission-form">
                 <div class="form-group">
                     <label for="post-title">Post Title:</label>
@@ -42,6 +45,8 @@
             <div id="featured-posts"></div>
         </section>
 
+        <img src="css/imageBread.png" alt="Divider Image" class="divider-image">
+
         <section class="content-area" id="forum-section"></section>
             <h2 class="content-title">Food Forum</h2>
             <div id="forum-topics">
@@ -54,6 +59,8 @@
                 <button type="button" id="add-topic">Add Topic</button>
             </form>
         </section>
+
+        
         
         <div id="reply-form-container" style="display: none;">
             <form id="reply-form">
