--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <header>
-        <div class="title"> a marvelous website </div>
+        <div class="title"> La Maison de Fleur </div>
         <nav class="nav-collapse">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -34,31 +34,23 @@
 
         <div class="foods">
             <div class="categories">
-                <div class="cat1">
-                    <a href="#"> Category 1</a>
-                </div>
-                <div class="cat2">
-                    <a href="#"> Category 2</a>
-                </div>
-                <div class="cat3">
-                    <a href="#"> Category 3</a>
-                    </div>
-                <div class="cat4">
-                    <a href="#"> Category 4</a>
-                </div>
+                <div class="cat1"> </div>
+                <div class="cat2"> </div>
+                <div class="cat3"> </div>
+                <div class="cat4"> </div>
             </div>
-            <div class="menu"> Sesonal Menu </div>
+            <div class="menu"><a href="menu.html"> Sesonal Menu </a></div>
         </div>
 
         <div class="appointment">
-
             <div class="applink"> 
                 <div class="apptitle">
-                    Seat Booking
+                    DINING RESERVATION
                 </div>
                 <div class="appcontent">
-                    At The Best French Restaurant in Chapel Hill
+                    At La Maison de Fleur
                 </div>
+                <div class="appbutton"><a href="contact.html">Book Seats Now</a></div>
             </div>
             <div class="appphoto"> </div>
         </div>
@@ -68,7 +60,7 @@
                 <h1>ABOUT</h1>
                 <p>La Maison de Fleur</p>
             </div>
-            </div>
+            <div class="aboutbutton"><a href="about.html">Learn More</a></div>
         </div>
 
         <div class="subscribe">
@@ -78,13 +70,23 @@
                 <p> Subscribe to our email list to get the latest news about special events, new seasonal menu release and other fantastic news!
                 </p>
                 <div class="subpics"></div>
-                <div class="button"> SUBMIT </div>
+                <div class="button"><a href="#">SUBMIT</a></div>
             </div>
-    </div>
+        </div>
+
+        <div class="forum"> 
+            <div class="forumtitle">
+                <h1>FORUM</h1>
+                <p>We'd love to hear from you!</p>
+            </div>
+            <div class="forumbutton"><a href="forum.html">Let's Post!</a>
+            </div>
+        </div>
+
     </main>
     
     <footer>
-        <p> @ COMP 126 Final Project Footer </p>
+        <p> ©️ 2024 Copyright by La Maison de FLeur </p>
     </footer>
 
     <script>
