--- a/forum.html
+++ b/forum.html
@@ -26,7 +26,7 @@
         <section class="content-area" id="submission-section">
             <h2 class="content-title">Share Your Culinary Experiences at La Maison de Fleur!</h2>
 
-            <img src="css/imageBread2.png" alt="Divider Image" class="divider-image1">
+            <img src="css/imageFlower.png" alt="Divider Image" class="divider-image1">
 
             <form id="submission-form">
                 <div class="form-group">
@@ -47,7 +47,7 @@
             <div id="featured-posts"></div>
         </section>
 
-        <img src="css/imageBread.png" alt="Divider Image" class="divider-image">
+        <img src="css/imageFlower2.png" alt="Divider Image" class="divider-image">
 
         <section class="content-area" id="forum-section"></section>
             <h2 class="content-title">Food Forum</h2>
