--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/menu.css">
     <title> Menu </title>
 </head>
-
 <body>
     <header>
         <div class="title"> a marvelous website </div>
@@ -67,11 +66,25 @@
                 <p class="description">Fresh tuna</p>
                 <p class="price">$8.00</p>
             </div>
+            <div class="menu-item">
+                <h3>Tuna (2 pcs)</h3>
+                <p class="description">Fresh tuna</p>
+                <p class="price">$8.00</p>
+            </div>
+            <div class="menu-item">
+                <h3>Tuna (2 pcs)</h3>
+                <p class="description">Fresh tuna</p>
+                <p class="price">$8.00</p>
+            </div>
         </section>
+
+        
     </main>
     
     <footer>
-        <p> @ COMP 126 Final Project Footer </p>
+        <div class="comp">
+            <p> @ COMP 126 Final Project Footer </p>
+        </div>
     </footer>
 
     <script>
