--- a/menu.html
+++ b/menu.html
@@ -29,62 +29,113 @@
             <section class="menu-category">
                 <h2>Appetizers</h2>
                 <div class="menu-item">
-                    <h3>LA SOUPE</h3>
+                    <h3>La Soupe</h3>
                     <p class="description">Warm red lentils velouté, feta crumble & micro greens</p>
-                    <p class="price">$15.00</p>
+                    <p class="price">15</p>
                 </div>
                 <div class="menu-item">
-                    <h3>LA BLEUE</h3>
+                    <h3>La Bleue</h3>
                     <p class="description">Arugula & endives salad, fresh pears, dry cranberries, Gorgonzola, toasted almonds & balsamic dressing</p>
-                    <p class="price">$16.00</p>
+                    <p class="price">16</p>
                 </div>
                 <div class="menu-item">
-                    <h3>LA TERRINE</h3>
+                    <h3>La Terrine</h3>
                     <p class="description">Home-made foie Gras terrine, green tomatoes marmalade</p>
-                    <p class="price">$15.00</p>
+                    <p class="price">15</p>
                 </div>
                 <div class="menu-item">
-                    <h3>LES MOULES</h3>
+                    <h3>Les Moules</h3>
                     <p class="description">P.E.I. mussels in Marinière sauce & homemade pommes frites</p>
-                    <p class="price">$15.00</p>
+                    <p class="price">15</p>
                 </div>
             </section>
         
             <section class="menu-category">
-                <h2>Rolls</h2>
+                <h2>La Terre</h2>
                 <div class="menu-item">
-                    <h3>California Roll</h3>
-                    <p class="description">Crab, avocado, and cucumber</p>
-                    <p class="price">$8.50</p>
+                    <h3>Le Magret</h3>
+                    <p class="description">Roasted duck breast, roasted beets in balsamic & honey,over parsnip purée, plum sauce</p>
+                    <p class="price">34</p>
                 </div>
                 <div class="menu-item">
-                    <h3>Spicy Tuna Roll</h3>
-                    <p class="description">Tuna with spicy mayo</p>
-                    <p class="price">$9.50</p>
+                    <h3>La Blanquette</h3>
+                    <p class="description">Braised veal shoulders in an aromatic creamy sauce, Mushrooms & carrots, side of basmati rice</p>
+                    <p class="price">36</p>
+                </div>
+                <div class="menu-item">
+                    <h3>L'Entrecôte</h3>
+                    <p class="description">Pan seared ribeye(10oz), hand-cut French fries, green salad & green peppercorn sauce</p>
+                    <p class="price">35</p>
+                </div>
+                <div class="menu-item">
+                    <h3>La Venaison</h3>
+                    <p class="description">Venison tenderloin*, sweet potatoes gratin, Brussels sprout, Red wine & shallots sauce</p>
+                    <p class="price">46</p>
+                </div>
+                <div class="menu-item">
+                    <h3>La Volaille</h3>
+                    <p class="description">Cumin & Maple Glazed Cornish Game Hen, Roasted Autumn Vegetables, Sage</p>
+                    <p class="price">38</p>
                 </div>
             </section>
         
             <section class="menu-category">
-                <h2>Sushi & Sashimi</h2>
+                <h2>Les Desserts</h2>
                 <div class="menu-item">
-                    <h3>Salmon (2 pcs)</h3>
-                    <p class="description">Fresh salmon</p>
-                    <p class="price">$7.50</p>
+                    <h3>La Crème brûlée</h3>
+                    <p class="description">Cardamom Cake, Dolce De Leche, Candied Walnuts, Persimmon Pearls, Walnut Rum Ice Cream</p>
+                    <p class="price">14</p>
                 </div>
                 <div class="menu-item">
-                    <h3>Tuna (2 pcs)</h3>
-                    <p class="description">Fresh tuna</p>
-                    <p class="price">$8.00</p>
+                    <h3>île flottante</h3>
+                    <p class="description">Vanilla Ice Cream, 5 Spice Anglaise</p>
+                    <p class="price">11</p>
                 </div>
                 <div class="menu-item">
-                    <h3>Tuna (2 pcs)</h3>
-                    <p class="description">Fresh tuna</p>
-                    <p class="price">$8.00</p>
+                    <h3>La Dame Blanche</h3>
+                    <p class="description">vanilla ice cream, whipped cream, warm molten chocolate</p>
+                    <p class="price">11</p>
                 </div>
                 <div class="menu-item">
-                    <h3>Tuna (2 pcs)</h3>
-                    <p class="description">Fresh tuna</p>
-                    <p class="price">$8.00</p>
+                    <h3>Le Petit gâteau</h3>
+                    <p class="description">chocolate molten cake</p>
+                    <p class="price">10</p>
+                </div>
+            </section>
+
+            <section class="main-title">
+                <h1>Seasonal Wine</h1>
+            </section>
+
+            <section class="menu-category">
+                <h2>Les Rosés</h2>
+                <div class="menu-item">
+                    <h3>Peyrassol 'Cuvée des Commandeurs'</h3>
+                    <p class="description">Côtes de Provence, France</p>
+                    <p class="price">21</p>
+                </div>
+                <div class="menu-item">
+                    <h3>Fattoria Sardi '11 Primavere'</h3>
+                    <p class="description">Tuscany, Italy</p>
+                    <p class="price">19</p>
+                </div>
+            </section>
+
+            <section class="menu-category">
+                    <h2>Le Blanc</h2>
+                <div class="menu-item">
+                    <h3>Sauvignon Blanc</h3>
+                    <p class="description">Résery Tuand, Loire</p>
+                    <p class="price">17</p>
+                </div>
+            </section>
+
+            <section class="menu-category">
+                <h2>Champagne</h2>
+                <div class="menu-item">
+                    <h3>Camille Savès 'Carte Blanche' Grand Cru</h3>
+                    <p class="description">Bouzy, France</p>
+                    <p class="price">25</p>
                 </div>
             </section>
         </main>
