--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <div class="title"> a marvelous website </div>
+            <div class="title"> La Maison de Fleur </div>
             <nav class="nav-collapse">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -29,23 +29,23 @@
             <section class="menu-category">
                 <h2>Appetizers</h2>
                 <div class="menu-item">
-                    <h3>La Soupe</h3>
-                    <p class="description">Warm red lentils velouté, feta crumble & micro greens</p>
+                    <h3>Velouté aux Lentilles</h3>
+                    <p class="description">Red lentil soup, feta crumble, microgreens</p>
                     <p class="price">15</p>
                 </div>
                 <div class="menu-item">
-                    <h3>La Bleue</h3>
-                    <p class="description">Arugula & endives salad, fresh pears, dry cranberries, Gorgonzola, toasted almonds & balsamic dressing</p>
+                    <h3>Salade d'Hiver</h3>
+                    <p class="description">Arugula, endives, pears, cranberries, Gorgonzola, almonds, balsamic dressing</p>
                     <p class="price">16</p>
                 </div>
                 <div class="menu-item">
-                    <h3>La Terrine</h3>
-                    <p class="description">Home-made foie Gras terrine, green tomatoes marmalade</p>
+                    <h3>Terrine Maison</h3>
+                    <p class="description">House-made foie gras, green tomato marmalade</p>
                     <p class="price">15</p>
                 </div>
                 <div class="menu-item">
-                    <h3>Les Moules</h3>
-                    <p class="description">P.E.I. mussels in Marinière sauce & homemade pommes frites</p>
+                    <h3>Moules & Frites</h3>
+                    <p class="description">P.E.I. mussels, Marinière sauce, homemade fries</p>
                     <p class="price">15</p>
                 </div>
             </section>
@@ -53,28 +53,28 @@
             <section class="menu-category">
                 <h2>La Terre</h2>
                 <div class="menu-item">
-                    <h3>Le Magret</h3>
-                    <p class="description">Roasted duck breast, roasted beets in balsamic & honey,over parsnip purée, plum sauce</p>
+                    <h3>Canard Balsamique</h3>
+                    <p class="description">Roasted duck breast, balsamic beets, parsnip purée, plum sauce</p>
                     <p class="price">34</p>
                 </div>
                 <div class="menu-item">
-                    <h3>La Blanquette</h3>
-                    <p class="description">Braised veal shoulders in an aromatic creamy sauce, Mushrooms & carrots, side of basmati rice</p>
+                    <h3>Veau à la Crème</h3>
+                    <p class="description">Braised veal, creamy sauce, mushrooms, carrots, basmati rice</p>
                     <p class="price">36</p>
                 </div>
                 <div class="menu-item">
-                    <h3>L'Entrecôte</h3>
-                    <p class="description">Pan seared ribeye(10oz), hand-cut French fries, green salad & green peppercorn sauce</p>
+                    <h3>Côte de Bœuf</h3>
+                    <p class="description">10oz ribeye, French fries, green salad, peppercorn sauce</p>
                     <p class="price">35</p>
                 </div>
                 <div class="menu-item">
-                    <h3>La Venaison</h3>
-                    <p class="description">Venison tenderloin*, sweet potatoes gratin, Brussels sprout, Red wine & shallots sauce</p>
+                    <h3>Venaison au Vin Rouge</h3>
+                    <p class="description">Venison, sweet potato gratin, Brussels sprouts, red wine sauce</p>
                     <p class="price">46</p>
                 </div>
                 <div class="menu-item">
-                    <h3>La Volaille</h3>
-                    <p class="description">Cumin & Maple Glazed Cornish Game Hen, Roasted Autumn Vegetables, Sage</p>
+                    <h3>Poule d'Automne</h3>
+                    <p class="description">Maple-glazed Cornish hen, autumn vegetables, sage</p>
                     <p class="price">38</p>
                 </div>
             </section>
@@ -87,7 +87,7 @@
                     <p class="price">14</p>
                 </div>
                 <div class="menu-item">
-                    <h3>île flottante</h3>
+                    <h3>Crème Anglaise Flottante</h3>
                     <p class="description">Vanilla Ice Cream, 5 Spice Anglaise</p>
                     <p class="price">11</p>
                 </div>
@@ -97,7 +97,7 @@
                     <p class="price">11</p>
                 </div>
                 <div class="menu-item">
-                    <h3>Le Petit gâteau</h3>
+                    <h3>Fondant au Chocolat</h3>
                     <p class="description">chocolate molten cake</p>
                     <p class="price">10</p>
                 </div>
@@ -108,7 +108,7 @@
             </section>
 
             <section class="menu-category">
-                <h2>Les Rosés</h2>
+                <h2>Rosés</h2>
                 <div class="menu-item">
                     <h3>Peyrassol 'Cuvée des Commandeurs'</h3>
                     <p class="description">Côtes de Provence, France</p>
@@ -122,7 +122,7 @@
             </section>
 
             <section class="menu-category">
-                    <h2>Le Blanc</h2>
+                <h2>Blanc</h2>
                 <div class="menu-item">
                     <h3>Sauvignon Blanc</h3>
                     <p class="description">Résery Tuand, Loire</p>
@@ -139,10 +139,16 @@
                 </div>
             </section>
         </main>
+
+        <section id="menu-info">
+            <h4>Important Information</h4>
+            <p>Please note that our menu is seasonal, and items may change based on the availability of ingredients. We strive to use fresh, locally sourced produce to enhance your dining experience.</p>
+            <p>If you have any allergies or dietary restrictions, please inform your server before ordering. We will do our best to accommodate your needs.</p>
+        </section>
         
         <footer>
             <div class="comp">
-                <p> @ COMP 126 Final Project Footer </p>
+                <p>  &#169 2024 Copyright by La Maison de Fleur </p>
             </div>
         </footer>
 
