--- a/menu.html
+++ b/menu.html
@@ -146,6 +146,15 @@
             <p>If you have any allergies or dietary restrictions, please inform your server before ordering. We will do our best to accommodate your needs.</p>
         </section>
         
+        <section id="forum-button-section">
+            <a href="css/forum.css" class="button">Visit Our Forum</a>
+        </section>
+    
+        <section id="forum">
+            <h2>Forum</h2>
+            <p>Discuss your experience, suggestions, and ideas here!</p>
+        </section>
+
         <footer>
             <div class="comp">
                 <p>  &#169 2024 Copyright by La Maison de Fleur </p>
