--- a/menu.html
+++ b/menu.html
@@ -148,11 +148,8 @@
         
         <section id="forum-button-section">
             <a href="css/forum.css" class="button">Visit Our Forum</a>
-        </section>
-    
-        <section id="forum">
-            <h2>Forum</h2>
-            <p>Discuss your experience, suggestions, and ideas here!</p>
+            <a href="#reservation" class="button reservation-button">Reservation</a>
+    </section>
         </section>
 
         <footer>
