--- a/about.html
+++ b/about.html
@@ -60,7 +60,10 @@
                 <h1>Our Philosophy</h1>
                 <br>
                 <p>At La Maison de Fleur, we believe every meal is a journey through flavors, textures, and memories. Guided by a commitment to the freshest ingredients, locally sourced produce, and classic French techniques, we strive to craft dishes that are as beautiful as they are delicious.</p>
+                <br>
+                <div class = "blockquote">
                 <blockquote>“Cooking is an art, and we are the artists.”</blockquote>
+            </div>
             </div>
             <div class = "imagecon">
                 <img class="scalable" src="image/image4.png" alt="Something Important">
@@ -71,7 +74,7 @@
         <section class="chef">
             <h1>Meet Our Chefs</h1>
             <div class="chef-container">
-                <!-- 第一位 Chef -->
+   
                 <div class="chef-card">
                     <h2>Chef Pierre Dubois</h2>
                     <img class="scalable" src="image/image5.png" alt="Something Important">
@@ -82,7 +85,7 @@
                         His specialties include a signature *Bouillabaisse* and a delicate *Tarte Tatin*, blending the warmth of tradition with a touch of innovation.
                     </p>
                 </div>
-                <!-- 第二位 Chef -->
+          
                 <div class="chef-card">
                     <h2>Chef Marie Fontaine</h2>
                     <img class="scalable" src="image/image6.png" alt="Something Important">
