--- a/menu.html
+++ b/menu.html
@@ -102,7 +102,9 @@
                     <p class="price">10</p>
                 </div>
             </section>
+        </main>
 
+        <div class="main2">
             <section class="main-title">
                 <h1>Seasonal Wine</h1>
             </section>
@@ -138,7 +140,7 @@
                     <p class="price">25</p>
                 </div>
             </section>
-        </main>
+        </div>
 
         <section id="menu-info">
             <h4>Important Information</h4>
@@ -148,7 +150,7 @@
         
         <section id="forum-button-section">
             <a href="css/forum.css" class="button">Visit Our Forum</a>
-            <a href="#reservation" class="button reservation-button">Reservation</a>
+            <a href="css/apointment.css" class="button reservation-button">Reservation</a>
     </section>
         </section>
 
