--- a/menu.html
+++ b/menu.html
@@ -121,14 +121,29 @@
                     <p class="description">Tuscany, Italy</p>
                     <p class="price">19</p>
                 </div>
+                <div class="menu-item">
+                    <h3>Forever Young Rosé</h3>
+                    <p class="description">Côtes de Provence, France</p>
+                    <p class="price">15</p>
+                </div>
+                <div class="menu-item">
+                    <h3>Arnot-Roberts Rosé </h3>
+                    <p class="description">California, US</p>
+                    <p class="price">15</p>
+                </div>
             </section>
 
             <section class="menu-category">
-                <h2>Blanc</h2>
+                <h2>Sauvignon Blanc</h2>
                 <div class="menu-item">
-                    <h3>Sauvignon Blanc</h3>
-                    <p class="description">Résery Tuand, Loire</p>
+                    <h3>Duckhorn Vineyards</h3>
+                    <p class="description">Napa Valley, California</p>
                     <p class="price">17</p>
+                </div>
+                <div class="menu-item">
+                    <h3>Hourglass</h3>
+                    <p class="description">Napa Valley, California</p>
+                    <p class="price">21</p>
                 </div>
             </section>
 
@@ -138,6 +153,21 @@
                     <h3>Camille Savès 'Carte Blanche' Grand Cru</h3>
                     <p class="description">Bouzy, France</p>
                     <p class="price">25</p>
+                </div>
+                <div class="menu-item">
+                    <h3>Dom Pérignon</h3>
+                    <p class="description">Epernay, France</p>
+                    <p class="price">30</p>
+                </div>
+                <div class="menu-item">
+                    <h3>Louis Roederer Brut</h3>
+                    <p class="description">Reims, France</p>
+                    <p class="price">17</p>
+                </div>
+                <div class="menu-item">
+                    <h3>Camille Savès Grand Cru Brut</h3>
+                    <p class="description">Bouzy, France</p>
+                    <p class="price">23</p>
                 </div>
             </section>
         </div>
