--- a/apointment.html
+++ b/apointment.html
@@ -15,9 +15,9 @@
         <div class="title"> Apointment part of a marvelous website </div>
         <nav class="nav-collapse">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="forum.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -105,6 +105,12 @@
         
     </main>
     
+    <footer>
+        <div class="comp">
+            <p>  &#169 2024 Copyright by La Maison de Fleur </p>
+        </div>
+    </footer>
+
     <script>
         var navigation = responsiveNav(".nav-collapse", {
             init: function () {
