--- a/menu.html
+++ b/menu.html
@@ -14,9 +14,9 @@
             <div class="title"> La Maison de Fleur </div>
             <nav class="nav-collapse">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="forum.html">Contact</a></li>
             </ul>
         </nav>
         </header>
