--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
         <div class="title">La Maison de Fleur </div>
         <nav class="nav-collapse">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="appointment.html">Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     </header>
