--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="appcontent">
                     At La Maison de Fleur
                 </div>
-                <div class="appbutton"><a href="contact.html">Book Seats Now</a></div>
+                <div class="appbutton"><a href="appointment.html">Book Seats Now</a></div>
             </div>
             <div class="appphoto"> </div>
         </div>
