--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@
     </header>
 
     <main>
-       <h1>About</h1>
+        <div class="abouttitle">
+            <h1>About</h1>
+        </div>
        
        <section class="history"> 
         
