--- a/menu.html
+++ b/menu.html
@@ -179,8 +179,8 @@
         </section>
         
         <section id="forum-button-section">
-            <a href="css/forum.css" class="button">Visit Our Forum</a>
-            <a href="css/apointment.css" class="button reservation-button">Reservation</a>
+            <a href="forum.html" class="button">Visit Our Forum</a>
+            <a href="appointment.html" class="button reservation-button">Reservation</a>
     </section>
         </section>
 
