--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
     </main>
     
     <footer>
-        <p> @ COMP 126 Final Project Footer </p>
+        <p> ©️ 2024 Copyright by La Maison de FLeur </p>
     </footer>
 
     <script>
